@@ -1,0 +1,11 @@
+Title: Fixed possible random "OSError: [Errno 9] Bad file descriptor" in GUI
+Level: 1
+Component: multisite
+Compatible: compat
+Version: 1.2.8p19
+Date: 1488182205
+Class: fix
+
+During rendering of any page in the GUI this error could occur. Restarting the
+apache of the site should be a workaround the issue for some time unitl applying
+the fix shipped with this change.
