@@ -1,4 +1,7 @@
 1.2.8p19:
+    Multisite:
+    * 4400 FIX: Fixed possible random "OSError: [Errno 9] Bad file descriptor" in GUI...
+
 
 1.2.8p18:
     Checks & Agents:
